--- a/trash.conf
+++ b/trash.conf
@@ -29,6 +29,7 @@ github.com/moby/sys c161267cd2212985f81a50a029001f82c91bca7f
 github.com/opencontainers/go-digest v1.0.0
 github.com/opencontainers/image-spec v1.1.0-rc2
 github.com/opencontainers/runtime-spec v1.1.0-rc.1
+github.com/opencontainers/runc v1.1.4
 github.com/pelletier/go-toml v1.9.5
 github.com/rootless-containers/bypass4netns v0.3.0
 github.com/rootless-containers/rootlesskit v1.1.0
@@ -39,7 +40,6 @@ github.com/tidwall/gjson v1.14.4
 github.com/vishvananda/netlink v1.2.1-beta.2
 github.com/vishvananda/netns v0.0.4
 github.com/yuchanns/srslog v1.1.0
-golang.org/x/crypto v0.5.0
 golang.org/x/net v0.5.0
 golang.org/x/sync v0.1.0
 golang.org/x/sys v0.4.0
@@ -47,4 +47,3 @@ golang.org/x/term v0.4.0
 golang.org/x/text v0.6.0
 gopkg.in/yaml.v3 v3.0.1
 gopkg.in/yaml.v2 v2.4.0
-gotest.tools/v3 v3.4.0
