Remove image encryption support

--- a/trash.conf
+++ b/trash.conf
@@ -5,6 +5,7 @@ github.com/containerd/cgroups eac1b00c8f16fd610f643ee1f34591ad8d452b49 https://g
 github.com/containerd/console v1.0.3
 github.com/containerd/containerd 5ea97886e3a3e79d2ca75458cc845b219e44946a https://github.com/burmilla/containerd
 github.com/containerd/continuity v0.3.0
+github.com/containerd/fifo v1.0.0
 github.com/containerd/go-cni v1.1.7
 github.com/containerd/imgcrypt v1.1.7
 github.com/containerd/nydus-snapshotter v0.5.1
